--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 Flask==3.0.0
-https://test.pypi.org/simple/formula1-report-b-v
+https://test.pypi.org/simple/ formula1-report-b-v
 Jinja2==3.1.2
 beautifulsoup4==4.12.2
